setup minSdkVersion and targetSdkVersion

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.joesnason.blescanner" >
 
+
+    <uses-sdk android:minSdkVersion="19"
+        android:targetSdkVersion="22" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
 
